# mc_naoqi_dcm

./: .clang-format  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  Dockerfile_2.1.4  README.md  fastgetsetdcm.cpp  fastgetsetdcm.h  qiproject.xml
.github/workflows/: build-docker.yml
.github/workflows/docker/: Dockerfile.ubuntu_20.04  Dockerfile_2.1.4  Dockerfile_2.5.0
docker/: Dockerfile_2.5.0  build.sh  run.sh
include/: NAORobotModule.h  PepperRobotModule.h  RobotModule.h  fastgetsetdcm.h  mc_naoqi_dcm.h
src/: CMakeLists.txt  NAORobotModule.cpp  PepperRobotModule.cpp  RobotModule.cpp  fastgetsetdcm.cpp  main.cpp  mc_naoqi_dcm.cpp
utils/: check_callback.py  check_safety_reflexes.py  deactivate_safety_reflexes.py
